data/all_generated_tests/raw_wast_tests/loop_StackCorruption_336.wast
;; 7. **Test 7**:    - **Description**: Create a loop with an invalid branch type signature mismatch with the enclosed blocks.    - **Constraint**: Adherence to proper type signatures during branch operations within loops.    - **Stack Corruption Check**: Check for stack state integrity amidst signature mismatches.

(assert_invalid
  (module (func $invalid-branch-type (result i32)
    (i32.const 1)
    (loop $l1 (result i32)
      (i32.const 2)
      (br 0) ;; Type signature mismatch
    )
  ))
  "type mismatch"
)